--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="63be87">  <td>23/03/20 16:19:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;winappclass.setUp()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">&gt;&gt;setUp</td> 
+<tr bgcolor="63be87">  <td>23/03/20 16:32:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;winappclass.setUp()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@127618319</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>23/03/20 16:19:45</td>   <td>1279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="winappclass.testapplication()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">testapplication</td> 
+<tr bgcolor="63be87">  <td>23/03/20 16:32:27</td>   <td>1456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="winappclass.testapplication()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">testapplication</td> 
   <td>main@127618319</td>   <td></td> </tr>
-<tr bgcolor="63be87">  <td>23/03/20 16:19:46</td>   <td>2501</td> <td title="&lt;&lt;winappclass.tearDown()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="63be87">  <td>23/03/20 16:32:29</td>   <td>2816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="winappclass.writenotes()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">writenotes</td> 
+  <td>main@127618319</td>   <td></td> </tr>
+<tr bgcolor="63be87">  <td>23/03/20 16:32:35</td>   <td>9269</td> <td title="&lt;&lt;winappclass.tearDown()[pri:0, instance:Banqsoft.bankwinapp.winappclass@6b71769e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@127618319</td>   <td></td> </tr>
 </table>
